chrome://accessibility: list browser windows, get trees one at a time

In chrome://accessibility, the "Chrome Native UI" section behaves like
the "Pages" section. Browser windows are listed individually using the
.row class the Pages list uses.

-AccessibilityUIMessageHandler::RequestNativeUITree takes a session ID
as an argument and returns the accessibility tree for a single browser
window.
-The TargetDescriptor dictionary includes a field for a browser window's
session id, and a "type" field that is either "page" for a WebContents
or "browser" for a Browser.
-In accessibility.js, showTree and other functions handle both browser
windows and pages, since they can check |data|'s type field.
-Elements in a .row element are given ids based on the row's id + a
description of the element: '<id>:title', 'showTree', 'copyTree',
'hideTree', 'tree'.


Bug: 842895
Change-Id: I7ef7b4edb884ff097fdaefc41ba97a813a7b49e1
Reviewed-on: https://chromium-review.googlesource.com/c/1260009
Commit-Queue: James Wallace-Lee <jamwalla@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601296}
Former-commit-id: 9604fdc3c149d50a99d2cfb92a8a6d4b8bac77b0